# pong-cpp

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md
pong-cpp/: CMakeLists.txt
pong-cpp/include/: Ball.h  Game.h  GameConstants.h  GameObject.h  Player.h  ResourceManager.h  Shader.h  SpriteRenderer.h
pong-cpp/include/glad/: glad.h
pong-cpp/res/shaders/: racket.frag  racket.vert
pong-cpp/src/: Ball.cpp  Game.cpp  GameObject.cpp  Player.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  glad.c  main.cpp
